@@ -17,6 +17,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+plugin/plugin_python.c: Only set WhoAmI when running the command registered by
+    CFPython.RegisterCommand. Set default result value to "success".
 plugin/plugin_python.c: Fix memory leaks by freeing old strings before
    assigning a new value.
 plugin/plugin_python.c: Use correct format specifiers for item values and
